--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- reset.css -->
+    <link rel="stylesheet" href="./assets/css/reset.css" type='text/css'/>
+    <!-- style.css -->
+    <link rel="stylesheet" href="./assets/css/style.css" type='text/css'/>
+
     <title>Crystal Collector - TT</title>
 </head>
 <body>
