added js to head tag in index.html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- style.css -->
     <link rel="stylesheet" href="./assets/css/style.css" type='text/css'/>
 
+    <!-- game.js -->
+    <script src="./assets/javascript/game.js"></script>
     <title>Crystal Collector - TT</title>
 </head>
 <body>
