added header and styled it

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <title>Crystal Collector - TT</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="container">
+            <!-- Header -->
+            <div class="header">
+                <h1>Crystal Collector</h1>
+                <!-- Add rules to the header page -->
+                <!-- <div class="rules">
+
+                </div> -->
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
