--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- reset.css -->
-    <link rel="stylesheet" href="./assets/css/reset.css" type='text/css'/>
+    <link rel="stylesheet" href="./assets/css/reset.css" type='text/css' />
     <!-- style.css -->
-    <link rel="stylesheet" href="./assets/css/style.css" type='text/css'/>
+    <link rel="stylesheet" href="./assets/css/style.css" type='text/css' />
 
     <!-- game.js -->
     <script src="./assets/javascript/game.js"></script>
-    
+
     <title>Crystal Collector - TT</title>
 </head>
+
 <body>
     <div class="wrapper">
         <div class="container">
             <!-- Header -->
             <div class="header">
                 <h1>Crystal Collector</h1>
-                <!-- Add rules to the header page -->
-                <!-- <div class="rules">
 
-                </div> -->
+                <div class="rules">
+                    <p>
+                        You will be given a random number at the start of the game.
+                        <br/>
+                        There are four crystals to choose from. By clicking on a crystal
+                        you will add a specific amount of points to your total score.
+                        <br/>
+                        You win the game by matching your total score to the random number,
+                        you lose the game if your total score goes above the random number.
+                        <br/>
+                        The value of each crystal is hidden from you until you click on it.
+                        <br/>
+                        Each time when the game starts, the game will change the values of each crystal.
+                    </p>
+                </div>
             </div>
 
         </div>
     </div>
 </body>
+
 </html>
