added instructions title to div.rules element

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <h1>Crystal Collector</h1>
 
                 <div class="rules">
+                    <h3>Instructions</h3>
                     <p>
                         You will be given a random number at the start of the game.
                         <br/>
