--- a/index.html
+++ b/index.html
@@ -23,23 +23,70 @@
             <div class="header">
                 <h1>Crystal Collector</h1>
 
-                <div class="rules">
-                    <h3>Instructions</h3>
-                    <p>
-                        You will be given a random number at the start of the game.
-                        <br/>
-                        There are four crystals to choose from. By clicking on a crystal
-                        you will add a specific amount of points to your total score.
-                        <br/>
-                        You win the game by matching your total score to the random number,
-                        you lose the game if your total score goes above the random number.
-                        <br/>
-                        The value of each crystal is hidden from you until you click on it.
-                        <br/>
-                        Each time when the game starts, the game will change the values of each crystal.
-                    </p>
+
+            </div>
+
+            <!-- Rules -->
+            <div class="rules default-margin">
+                <h3>Instructions</h3>
+                <p>
+                    You will be given a random number at the start of the game.
+                    <br />
+                    There are four crystals to choose from. By clicking on a crystal
+                    you will add a specific amount of points to your total score.
+                    <br />
+                    You win the game by matching your total score to the random number,
+                    you lose the game if your total score goes above the random number.
+                    <br />
+                    The value of each crystal is hidden from you until you click on it.
+                    <br />
+                    Each time when the game starts, the game will change the values of each crystal.
+                </p>
+            </div>
+
+
+            <!-- <div class="game default-margin">
+                <div class="images">
+                    <div class="row">
+                        <img src="./assets/images/denim_crystal.png" alt="denim" />
+                        <img src="./assets/images/orange_crysal.png" alt="orange" />
+                    </div>
+                    <div class="row">
+                        <img src="./assets/images/pink_crystal.png" alt="pink" />
+                        <img src="./assets/images/vintage_crystal.png" alt="vintage" />
+                    </div>
+                </div>
+
+                <div class="scoreboard">
+                    <h3>SCORE BOARD</h3>
+                </div>
+            </div> -->
+
+            <div class="game-test default-margin">
+                <div class="row">
+                    <div class="column">
+
+
+                        <div class="images">
+                            <div class="row">
+                                <img src="./assets/images/denim_crystal.png" alt="denim" />
+                                <img src="./assets/images/orange_crysal.png" alt="orange" />
+                                <img src="./assets/images/pink_crystal.png" alt="pink" />
+                                <img src="./assets/images/vintage_crystal.png" alt="vintage" />
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="column">
+                        <h2>Column 2</h2>
+                        <p>text...</p>
+                    </div>
                 </div>
             </div>
+
+
+
 
         </div>
     </div>
