able to click on images with a console mentioning it

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <!-- style.css -->
     <link rel="stylesheet" href="./assets/css/style.css" type='text/css' />
 
-    <!-- game.js -->
-    <script src="./assets/javascript/game.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <title>Crystal Collector - TT</title>
 </head>
@@ -72,6 +73,9 @@
 
         </div>
     </div>
+    
+    <!-- game.js -->
+    <script src="./assets/javascript/game.js"></script>
 </body>
 
 </html>
