able to add values to crystals in game.js file and console log them

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
                         <div class="images">
                             <div class="row">
-                                <img src="./assets/images/denim_crystal.png" alt="denim" />
-                                <img src="./assets/images/orange_crysal.png" alt="orange" />
-                                <img src="./assets/images/pink_crystal.png" alt="pink" />
-                                <img src="./assets/images/vintage_crystal.png" alt="vintage" />
+                                <img id="denim" src="./assets/images/denim_crystal.png" alt="denim" />
+                                <img id="orange" src="./assets/images/orange_crysal.png" alt="orange" />
+                                <img id="pink" src="./assets/images/pink_crystal.png" alt="pink" />
+                                <img id="vintage" src="./assets/images/vintage_crystal.png" alt="vintage" />
                             </div>
                         </div>
 
