added header to numbers displayed

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                             <!-- Update the number here -->
                             <div class="column" >
                                 <strong>
+                                    <h5 class="number-heading">User Total</h5>
                                     <p id="user_total">
                                         24
                                     </p>
@@ -72,6 +73,7 @@
 
                             <div class="column">
                                 <strong>
+                                    <h5 class="number-heading">Winning Number</h5>
                                     <p id="winning_number">
                                         58
                                     </p>
