--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="column" >
                                 <strong>
                                     <h5 class="number-heading">User Total</h5>
-                                    <p id="user_total">
+                                    <p id="user_total" class="displayed_number">
                                         24
                                     </p>
                                 </strong>
@@ -74,7 +74,7 @@
                             <div class="column">
                                 <strong>
                                     <h5 class="number-heading">Winning Number</h5>
-                                    <p id="winning_number">
+                                    <p id="winning_number" class="displayed_number">
                                         58
                                     </p>
                                 </strong>
