updates user total each time a crystal is now clicked

--- a/index.html
+++ b/index.html
@@ -60,21 +60,20 @@
                     </div>
 
                     <div class="column">
-                        <div class="row" style="position: relative;">
+                        <div class="row">
                             <!-- Update the number here -->
-                            <div class="column" >
-                                <strong>
-                                    <h5 class="number-heading">User Total</h5>
-                                    <p id="user_total" class="displayed_number">
-                                        24
-                                    </p>
+                            <div class="column" style="border-right: 2px solid black; position: relative;">
+                                <h5 class="number-heading">Total Score</h5>
+                                <strong class="displayed_number" style="padding: 0 50px">
+                                    <p id="user_total"></p>
                                 </strong>
                             </div>
 
-                            <div class="column">
-                                <strong>
-                                    <h5 class="number-heading">Winning Number</h5>
-                                    <p id="winning_number" class="displayed_number">
+                            <div class="column" style="position: relative;">
+                                <!-- padding: 0 60px -->
+                                <h5 class="number-heading">Random Number</h5>
+                                <strong class="displayed_number" style="padding: 0 60px">
+                                    <p id="winning_number">
                                     </p>
                                 </strong>
                             </div>
