styled .scores_container on index.html file

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                                     <div class="row score_layout">Status: </div>
 
                                     <!-- Wins -->
-                                    <div class="row score_layout">Wins: <p id="wins">6</p></div>
+                                    <div class="row score_layout">Wins: <span id="wins">6</span></div>
 
                                     <!-- Losses -->
-                                    <div class="row">Losses: <p id="losses"></p></div>
+                                    <div class="row">Losses: <span id="losses"></span></div>
                                 </div>
 
 
