--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                                 </strong> -->
                                 <div class="scores_container">
                                     <!-- Status -->
-                                    <div class="row score_layout">Status: </div>
+                                    <div class="row score_layout">Status: <span id="status"></span></div>
 
                                     <!-- Wins -->
-                                    <div class="row score_layout">Wins: <span id="wins">6</span></div>
+                                    <div class="row score_layout">Wins: <span id="wins"></span></div>
 
                                     <!-- Losses -->
                                     <div class="row">Losses: <span id="losses"></span></div>
